force-app/main/default/objects/Activity/fields/FinServ__NextSteps__c.field-meta.xml
<CustomField>
    <fullName>FinServ__NextSteps__c</fullName>
    <description>Notes about follow-up activities</description>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>