force-app/main/default/objects/Activity/fields/FoobarPicklist__c.field-meta.xml
<CustomField>
    <fullName>FoobarPicklist__c</fullName>
    <label>FoobarPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>